--- a/project/vstudio/aya_lib/aya_lib.vcxproj.filters
+++ b/project/vstudio/aya_lib/aya_lib.vcxproj.filters
@@ -7,24 +7,50 @@
     <Filter Include="source">
       <UniqueIdentifier>{ca8fa7f4-1730-4ecc-a564-20aa5a95664d}</UniqueIdentifier>
     </Filter>
-    <Filter Include="include\geometry">
-      <UniqueIdentifier>{225f5a1d-d199-416d-8745-a563f0062a3a}</UniqueIdentifier>
+    <Filter Include="module">
+      <UniqueIdentifier>{4ab0c7b5-77cf-4166-bd00-d6ad99c913bf}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="include\aya_lib">
+      <UniqueIdentifier>{90b26eeb-dbbc-4dbc-857c-f6e173f25348}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="include\aya_lib\geometry">
+      <UniqueIdentifier>{3165c83b-b44d-443d-8619-340e0b7e70a7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="include\aya_lib\display">
+      <UniqueIdentifier>{aa1ba37b-bf00-410e-8651-0e7dbd131c79}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\source\aya_lib\aya_lib.cpp">
-      <Filter>source</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\include\aya_lib\aya_lib.hpp">
-      <Filter>include</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\..\include\aya_lib\geometry\geometry.hpp">
-      <Filter>include\geometry</Filter>
+      <Filter>include\aya_lib\geometry</Filter>
     </ClInclude>
     <ClInclude Include="..\..\..\include\aya_lib\concept.hpp">
-      <Filter>include</Filter>
+      <Filter>include\aya_lib</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\include\aya_lib\aya_lib.hpp">
+      <Filter>include\aya_lib</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\include\aya_lib\display\window.hpp">
+      <Filter>include\aya_lib\display</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\..\..\module\aya.cppm">
+      <Filter>module</Filter>
+    </None>
+    <None Include="..\..\..\module\aya.geometry.cppm">
+      <Filter>module</Filter>
+    </None>
+    <None Include="..\..\..\module\aya.window.cppm">
+      <Filter>module</Filter>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\source\aya.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\include\aya_lib\display\window.cpp">
+      <Filter>include\aya_lib\display</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
