--- a/project/vstudio/aya_lib_tests/aya_lib_tests.vcxproj.filters
+++ b/project/vstudio/aya_lib_tests/aya_lib_tests.vcxproj.filters
@@ -1,17 +1,37 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
-    <ClCompile Include="test.cpp" />
-    <ClCompile Include="..\..\..\test\aya_lib\geometry\geometry.test.cpp">
-      <Filter>geometry</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Filter Include="geometry">
+    <Filter Include="aya">
+      <UniqueIdentifier>{e794260f-a1c3-40bd-a687-58d9de8aab39}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="aya\display">
+      <UniqueIdentifier>{7ada54fb-4331-4143-a681-cc2a1670ec7e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="aya\geometry">
       <UniqueIdentifier>{698842c5-3a3f-454b-9523-cf759eb841ae}</UniqueIdentifier>
     </Filter>
+    <Filter Include="module">
+      <UniqueIdentifier>{8bceace0-240d-445b-9dfb-04692354cdbe}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\test\aya\display\window.test.cpp">
+      <Filter>aya\display</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\test\aya\geometry\geometry.test.cpp">
+      <Filter>aya\geometry</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\module\aya.cppm">
+      <Filter>module</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\module\aya.geometry.cppm">
+      <Filter>module</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\module\aya.window.cppm">
+      <Filter>module</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
