--- a/project/vstudio/aya_lib_examples/aya_lib_examples.vcxproj
+++ b/project/vstudio/aya_lib_examples/aya_lib_examples.vcxproj
@@ -18,57 +18,35 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="..\..\..\include\aya_lib\aya_lib.hpp" />
-    <ClInclude Include="..\..\..\include\aya_lib\concept.hpp" />
-    <ClInclude Include="..\..\..\include\aya_lib\display\window.hpp" />
-    <ClInclude Include="..\..\..\include\aya_lib\geometry\geometry.hpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\..\module\aya.cppm">
-      <FileType>Document</FileType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="..\..\..\module\aya.geometry.cppm">
-      <FileType>Document</FileType>
-    </None>
-    <None Include="..\..\..\module\aya.window.cppm">
-      <FileType>Document</FileType>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <ClCompile Include="..\..\..\source\aya_lib\display\window.cpp" />
-  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{03060e72-cd42-4795-8751-1bd71c01ea5e}</ProjectGuid>
-    <RootNamespace>ayalib</RootNamespace>
+    <ProjectGuid>{abe68ed7-05e9-44b7-80d6-a9fdada4dd39}</ProjectGuid>
+    <RootNamespace>ayalibexamples</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug-lib|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug-dll|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release-lib|x64'" Label="Configuration">
-    <ConfigurationType>StaticLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
     <CharacterSet>Unicode</CharacterSet>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release-dll|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>false</UseDebugLibraries>
     <PlatformToolset>v143</PlatformToolset>
     <WholeProgramOptimization>true</WholeProgramOptimization>
@@ -92,17 +70,12 @@
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug-lib|x64'">
-    <OutDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\output\</OutDir>
-    <IntDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\intermediate\</IntDir>
-    <IncludePath>$(SolutionDir)..\..\include;$(IncludePath)</IncludePath>
-  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug-dll|x64'">
     <OutDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\output\</OutDir>
     <IntDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\intermediate\</IntDir>
     <IncludePath>$(SolutionDir)..\..\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release-lib|x64'">
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='debug-lib|x64'">
     <OutDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\output\</OutDir>
     <IntDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\intermediate\</IntDir>
     <IncludePath>$(SolutionDir)..\..\include;$(IncludePath)</IncludePath>
@@ -112,33 +85,44 @@
     <IntDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\intermediate\</IntDir>
     <IncludePath>$(SolutionDir)..\..\include;$(IncludePath)</IncludePath>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='release-lib|x64'">
+    <OutDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\output\</OutDir>
+    <IntDir>$(SolutionDir)..\..\build\$(ProjectName)\$(Configuration)\intermediate\</IntDir>
+    <IncludePath>$(SolutionDir)..\..\include;$(IncludePath)</IncludePath>
+  </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='debug-lib|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions);AYA_LIB_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>robocopy $(TargetDir)..\..\..\aya_lib\$(Configuration)\output $(TargetDir) aya_lib.lib /is /njh /njs /np
+exit 0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='debug-dll|x64'">
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_LIB;%(PreprocessorDefinitions);AYA_LIB_DLL;AYA_LIB_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions);AYA_LIB_DLL</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>robocopy $(TargetDir)..\..\..\aya_lib\$(Configuration)\output $(TargetDir) aya_lib.lib aya_lib.dll /is /njh /njs /np
+exit 0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='release-lib|x64'">
     <ClCompile>
@@ -146,17 +130,20 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions);AYA_LIB_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>robocopy $(TargetDir)..\..\..\aya_lib\$(Configuration)\output $(TargetDir) aya_lib.lib /is /njh /njs /np
+exit 0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='release-dll|x64'">
     <ClCompile>
@@ -164,18 +151,32 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>NDEBUG;_LIB;%(PreprocessorDefinitions);AYA_LIB_DLL;AYA_LIB_EXPORTS</PreprocessorDefinitions>
+      <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions);AYA_LIB_DLL</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
       <LanguageStandard>stdcpplatest</LanguageStandard>
     </ClCompile>
     <Link>
-      <SubSystem>
-      </SubSystem>
+      <SubSystem>Console</SubSystem>
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <GenerateDebugInformation>true</GenerateDebugInformation>
     </Link>
+    <PreBuildEvent>
+      <Command>robocopy $(TargetDir)..\..\..\aya_lib\$(Configuration)\output $(TargetDir) aya_lib.lib aya_lib.dll /is /njh /njs /np
+exit 0</Command>
+    </PreBuildEvent>
   </ItemDefinitionGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\..\module\aya.cppm" />
+    <ClCompile Include="..\..\..\module\aya.geometry.cppm" />
+    <ClCompile Include="..\..\..\module\aya.window.cppm" />
+    <ClCompile Include="..\..\..\source\aya_lib_examples\aya_lib_examples.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\aya_lib\aya_lib.vcxproj">
+      <Project>{03060e72-cd42-4795-8751-1bd71c01ea5e}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
